appimage构建更新